site/web_modules/layouts/Documentation/index.css
:root {
  --color: #182234;
}

.documentation {
  display: flex;
  padding: 0 2rem;

  &Nav {
    flex: 0 0 8rem;
    position: relative;
  }
  &Content {
    flex: 1;
    padding: 3rem 0;
    margin-left: 4rem;
  }
}

.nav {
  padding: 3rem 0;

  &Sticky {
    composes: nav;
    position: fixed;
    top: 0;
  }

  &List {
    padding: 0;
    margin: 0;
    list-style-position: inside;
  }
    &Item {
      margin: .8rem 0;
      font-family: "Fira Mono", monospace;
      font-size: .85rem;
      color: var(--color);

      &:first-child {
        margin-top: 0;
      }
      &:last-child {
        margin-bottom: 0;
      }
    }
      &Link {
        text-decoration: none;
        color: color(var(--color) l(+50%));

        &Active {
          composes: navLink;
          color: var(--color);
        }
      }
}

